crates/guicons-core/src/snapshots/guicons_core__parse__tests__providers_entry_must_be_a_table.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`[providers]` must be a table",
]
