crates/guicons-core/src/snapshots/guicons_core__parse__tests__redefining_a_builtin_provider_without_override_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`providers.fluent` is a built-in provider; use `[providers.fluent.override]` to customize it instead of redefining it",
]
