crates/guicons-core/src/snapshots/guicons_core__parse__tests__simple_file_entry.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings",
        family: "settings",
        variant: None,
        size: None,
        source: File(
            "/workspace/settings.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 36..56,
        file: "",
    },
]
