crates/guicons-core/src/snapshots/guicons_core__parse__tests__two_sources_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "icon manifest entry `settings` must define exactly one source (file/iconify/url/glyph), found 2",
]
