crates/guicons-core/src/snapshots/guicons_core__parse__tests__unsupported_field_is_rejected.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "unexpected field(s): `bogus` (expected one of: `root`, `file`, `iconify`, `url`, `glyph`, `windows-ico`, `dynamic`, `paint`)",
]
