crates/guicons-core/src/snapshots/guicons_core__parse__tests__variant_entry_must_be_an_inline_table.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "variant `settings.filled` must be an inline table",
]
