crates/guicons-core/src/snapshots/guicons_core__parse__tests__variants_must_be_a_table.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`variants` in `settings` must be a table",
]
