crates/guicons-core/src/snapshots/guicons_core__parse__tests__variants_produce_two_entries_sharing_a_family.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings-filled",
        family: "settings",
        variant: Some(
            "filled",
        ),
        size: None,
        source: File(
            "/workspace/settings-filled.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 54..86,
        file: "",
    },
    IconEntry {
        key: "settings-regular",
        family: "settings",
        variant: Some(
            "regular",
        ),
        size: None,
        source: File(
            "/workspace/settings-regular.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 118..151,
        file: "",
    },
]
