crates/guicons-core/src/snapshots/guicons_core__parse__tests__wrong_field_type_is_rejected.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "expected a bool, found string",
]
